--- a/requirements.txt
+++ b/requirements.txt
@@ -52,10 +52,15 @@ aws-cdk.custom-resources==1.124.0
 aws-cdk.cx-api==1.124.0
 aws-cdk.pipelines==1.124.0
 aws-cdk.region-info==1.124.0
+boto3==1.18.47
+botocore==1.21.47
 cattrs==1.8.0
 constructs==3.3.152
+jmespath==0.10.0
 jsii==1.34.0
 publication==0.0.3
 python-dateutil==2.8.2
+s3transfer==0.5.0
 six==1.16.0
 typing-extensions==3.10.0.2
+urllib3==1.26.7
