--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is a blank project for Python development with CDK.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \"Building\" && exit 1"
+    "test": "echo \"Error: no test specified\"",
+    "build": "echo \"Building\""
   },
   "repository": {
     "type": "git",
